# eigenVectorization

./: CMakeLists.txt  main  main.cpp  main_beforeGLM.cpp  main_beforeSelect.cpp  main_beforeThanhPhan.cpp  main_learn.cpp  main_selectOK_beforesending.cpp  main_send_17Aug_2022_before_inverse_fixing.cpp  main_thanhPhan_debugged.cpp  main_vector.cpp  timelog
includes/eigen3/Eigen/: PardisoSupport:Zone.Identifier
